--- a/style.css
+++ b/style.css
@@ -308,7 +308,7 @@ footer {
   h4,
   h5,
   label {
-    color: black;
+    color: white;
   }
   h2 {
     font-size: 24px;
@@ -316,7 +316,7 @@ footer {
 }
 
 .modal-content {
-  background-color: #fefefe;
+  background-color: #00000a;
   margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
